--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -5,14 +5,14 @@ app:
     image: codeship/ruby-rails-quickstart
     dockerfile: Dockerfile
   environment:
-    PGHOST: pg_db
+    PGHOST: pg-db
     PGUSER: sample_postgres_user
     PGPASSWORD: sample_postgres_password
     PGDATABASE: postgres
     RAILS_ENV: test
   depends_on:
-    - pg_db
-pg_db:
+    - pg-db
+pg-db:
   image: postgres:9.6.5
   environment:
     POSTGRES_USER: sample_postgres_user
