docker-compose healthcheck

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,19 @@ version: '3'
 services:
   app:
     build: .
-    command: /bin/bash -c 'sleep 5 && bundle exec rake db:migrate && rails server'
+    command: /bin/bash -c 'bundle exec rake db:migrate && rails server'
     ports:
       - "3000:3000"
     environment:
-      PGHOST: pg_db
+      PGHOST: pg-db
       PGUSER: sample_postgres_user
       PGPASSWORD: sample_postgres_password
       PGDATABASE: postgres
       RAILS_ENV: development
-    links:
-      - pg_db
-  pg_db:
-    image: postgres:9.6.5
+    depends_on:
+      - pg-db
+  pg-db:
+    image: healthcheck/postgres
     environment:
       POSTGRES_USER: sample_postgres_user
       POSTGRES_PASSWORD: sample_postgres_password
